# CMakeList.txt : CMake project for Test_Timer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Test_Timer")

# Add source to this project's executable.
add_executable (Test_Timer "Test_Timer.cpp" "Test_Timer.h" "main.cpp")

# TODO: Add tests and install targets if needed.
